[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/ui/screens/LoginPanel.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/hope_gold.ttf" type="DynamicFontData" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Logging in." ]
}

[sub_resource type="Animation" id=3]
resource_name = "animate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "Logging in", "Logging in.", "Logging in..", "Logging in...", "Logging in" ]
}

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 2
outline_color = Color( 0.447059, 0.219608, 0.0392157, 1 )
font_data = ExtResource( 2 )

[node name="Login with Enjin" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 29.0
script = ExtResource( 1 )

[node name="LoginDialog" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
custom_constants/separation = 10
alignment = 1

[node name="UsernameLabel" type="Label" parent="LoginDialog"]
margin_top = 139.0
margin_right = 819.0
margin_bottom = 153.0
text = "Email"
align = 1

[node name="EmailField" type="LineEdit" parent="LoginDialog"]
margin_top = 163.0
margin_right = 819.0
margin_bottom = 187.0
align = 1

[node name="PasswordLabel" type="Label" parent="LoginDialog"]
margin_top = 197.0
margin_right = 819.0
margin_bottom = 228.0
text = "
Password"
align = 1

[node name="PasswordField" type="LineEdit" parent="LoginDialog"]
margin_top = 238.0
margin_right = 819.0
margin_bottom = 262.0
align = 1
secret = true

[node name="ErrorLabel" type="Label" parent="LoginDialog"]
margin_top = 272.0
margin_right = 819.0
margin_bottom = 286.0
custom_colors/font_color = Color( 1, 0.286275, 0.286275, 1 )
align = 1

[node name="LoginButton" type="Button" parent="LoginDialog"]
margin_top = 296.0
margin_right = 819.0
margin_bottom = 316.0
text = "Login"

[node name="LoggingInDialog" type="Control" parent="."]
visible = false
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2

[node name="Label" type="Label" parent="LoggingInDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.0
margin_top = -13.0
margin_right = 63.0
margin_bottom = 13.0
text = "Logging in."

[node name="AnimationPlayer" type="AnimationPlayer" parent="LoggingInDialog"]
anims/RESET = SubResource( 2 )
anims/animate = SubResource( 3 )

[node name="LoggedInDialog" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
custom_constants/separation = 10
alignment = 1

[node name="CurrentUser" type="HBoxContainer" parent="LoggedInDialog"]
margin_top = 149.0
margin_right = 819.0
margin_bottom = 163.0
alignment = 1

[node name="Label" type="Label" parent="LoggedInDialog/CurrentUser"]
margin_left = 337.0
margin_right = 420.0
margin_bottom = 14.0
text = "Logged in as "
align = 1

[node name="Name" type="Label" parent="LoggedInDialog/CurrentUser"]
margin_left = 424.0
margin_right = 481.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.913725, 0.411765, 0.215686, 1 )
text = "John Doe"

[node name="LogoutButton" type="Button" parent="LoggedInDialog"]
margin_top = 173.0
margin_right = 819.0
margin_bottom = 205.0
custom_colors/font_color = Color( 0.984314, 0.690196, 0.509804, 1 )
custom_fonts/font = SubResource( 4 )
text = "Logout"

[node name="Spacing" type="Label" parent="LoggedInDialog"]
margin_top = 215.0
margin_right = 819.0
margin_bottom = 229.0

[node name="LinkWalletLabel" type="Label" parent="LoggedInDialog"]
margin_top = 239.0
margin_right = 819.0
margin_bottom = 253.0
custom_colors/font_color = Color( 0.933333, 0.392157, 0.392157, 1 )
text = "Please link your wallet on the next tab."
align = 1

[node name="WalletLinkedLabel" type="Label" parent="LoggedInDialog"]
visible = false
margin_top = 263.0
margin_right = 819.0
margin_bottom = 277.0
custom_colors/font_color = Color( 0.67451, 0.952941, 0.541176, 1 )
text = "Wallet linked successfully!"
align = 1

[node name="PlayButton" type="Button" parent="LoggedInDialog"]
margin_top = 287.0
margin_right = 819.0
margin_bottom = 307.0
disabled = true
text = "Play"

[connection signal="text_entered" from="LoginDialog/EmailField" to="." method="_on_EmailField_text_entered"]
[connection signal="text_entered" from="LoginDialog/PasswordField" to="." method="_on_PasswordField_text_entered"]
[connection signal="pressed" from="LoginDialog/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="LoggedInDialog/LogoutButton" to="." method="_on_LogoutButton_pressed"]
[connection signal="pressed" from="LoggedInDialog/PlayButton" to="." method="_on_PlayButton_pressed"]
